--- a/pages/hospital/checklistManage.html
+++ b/pages/hospital/checklistManage.html
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html" charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../../static/img/logo.jpg">
+        <link rel="icon" href="../../static/img/logo.png">
         <title>检查单管理 | 基层医院</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="../../lib/bootstrap-3.3.5-dist/flatly/bootstrap.min.css">
