Initial user management

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html" charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="../static/img/logo.jpg">
+        <link rel="icon" href="../static/img/logo.png">
         <title>导航页</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="../lib/bootstrap-3.3.5-dist/flatly/bootstrap.min.css">
@@ -21,11 +21,15 @@
         <![endif] -->
     </head>
     <body>
-        <div class="row">
+        <div class="row link-container">
             <div class="container">
                 <a href="hospital/login.html" class="col-md-3 hospital-link"><div class="hospital-container">基层医院</div></a>
                 <a href="doctor/login.html" class="col-md-3 hospital-link"><div class="doctor-container">医生</div></a>
                 <a href="technician/login.html" class="col-md-3 hospital-link"><div class="technician-container">技师</div></a>
+            </div>
+            <div class="container">
+                <a href="partner/login.html" class="col-md-3 hospital-link"><div class="partner-container">合伙人</div></a>
+                <a href="admin/login.html" class="col-md-3 hospital-link"><div class="admin-container">系统管理员</div></a>
             </div>
         </div>
 
