--- a/pages/admin/AddPartner.html
+++ b/pages/admin/AddPartner.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../../static/img/logo.png">
-        <title>合伙人管理 | 系统管理员</title>
+        <title>添加合伙人 | 系统管理员</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="../../lib/bootstrap-3.3.5-dist/flatly/bootstrap.min.css">
         <!-- jQuery UI -->
@@ -165,9 +165,9 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="inputContact" class="col-lg-3 control-label">邮箱</label>
+                                <label for="inputEmail" class="col-lg-3 control-label">邮箱</label>
                                 <div class="col-lg-7">
-                                    <input type="text" class="form-control" id="inputContact" name="contact" placeholder="请输入联系方式...">
+                                    <input type="text" class="form-control" id="inputEmail" name="email" placeholder="请输入邮箱...">
                                 </div>
                             </div>
                             <div class="form-group">
