--- a/pages/admin/EditHospital.html
+++ b/pages/admin/EditHospital.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../../static/img/logo.png">
-        <title>添加基层医院 | 系统管理员</title>
+        <title>编辑基层医院 | 系统管理员</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="../../lib/bootstrap-3.3.5-dist/flatly/bootstrap.min.css">
         <!-- jQuery UI -->
@@ -100,12 +100,12 @@
             <div class="path-navigation">
                 <ol class="breadcrumb">
                     <li><a href="hospitalManage.html">基层医院管理</a></li>
-                    <li class="active">添加基层医院</li>
+                    <li class="active">编辑基层医院</li>
                 </ol>
             </div>
             <div class="container upload-form">
                 <form class="form-horizontal">
-                    <legend><b>添加基层医院</b></legend>
+                    <legend><b>编辑基层医院</b></legend>
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="panel-title">账户信息</div>
@@ -118,15 +118,15 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="inputPassword" class="col-lg-3 control-label">密码</label>
+                                <label for="inputPassword" class="col-lg-3 control-label">新密码</label>
                                 <div class="col-lg-7">
-                                    <input type="text" class="form-control" id="inputPassword" name="password" placeholder="请输入用户名...">
+                                    <input type="text" class="form-control" id="inputPassword" name="password" placeholder="请输入新密码...">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="rePassword" class="col-lg-3 control-label">重复密码</label>
                                 <div class="col-lg-7">
-                                    <input type="text" class="form-control" id="rePassword" placeholder="请重复输入密码...">
+                                    <input type="text" class="form-control" id="rePassword" placeholder="请重复输入新密码...">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -138,7 +138,6 @@
                                     </select>
                                 </div>
                             </div>
-                            <input type="hidden" id="inputTime" name="time">
                         </div>
                     </div>
                     <div class="panel panel-default">
@@ -229,6 +228,6 @@
         <script src="../../lib/DataTables-1.10.8/js/jquery.dataTables.min.js"></script>
         <script src="../../lib/DataTables-1.10.8/js/dataTables.bootstrap.min.js"></script>
 
-        <script src="../../static/js/admin/AddHospital.js"></script>
+        <script src="../../static/js/admin/EditHospital.js"></script>
     </body>
 </html>
