--- a/pages/admin/hospitalManage.html
+++ b/pages/admin/hospitalManage.html
@@ -112,6 +112,7 @@
                         <tr>
                             <th>编号</th>
                             <th>用户名</th>
+                            <th>医院名称</th>
                             <th>负责人</th>
                             <th>身份证号</th>
                             <th>创建时间</th>
@@ -120,6 +121,63 @@
                         </tr>
                     </thead>
                 </table>
+            </div>
+        </div>
+
+        <div id="stopModal" class="modal fade">
+            <div class="modal-dialog">
+                <input type="hidden" id="stopId">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">停用状态修改提示</h4>
+                    </div>
+                    <div class="modal-body">
+                        确认停用该基层医院状态?
+                    </div>
+                    <div class="modal-footer">
+                        <a href="javascript:void(0);" class="btn btn-primary" id="stopModalBtn">确认</a>
+                        <a href="javascript:void(0);" class="btn btn-primary" data-dismiss="modal">返回</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="deleteModal" class="modal fade">
+            <div class="modal-dialog">
+                <input type="hidden" id="deleteId">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">删除提示</h4>
+                    </div>
+                    <div class="modal-body">
+                        确认删除该基层医院?
+                    </div>
+                    <div class="modal-footer">
+                        <a href="javascript:void(0);" class="btn btn-primary" id="deleteModalBtn">确认</a>
+                        <a href="javascript:void(0);" class="btn btn-primary" data-dismiss="modal">返回</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="startModal" class="modal fade">
+            <div class="modal-dialog">
+                <input type="hidden" id="startId">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">启用提示</h4>
+                    </div>
+                    <div class="modal-body">
+                        确认启用该基层医院?
+                    </div>
+                    <div class="modal-footer">
+                        <a href="javascript:void(0);" class="btn btn-primary" id="startModalBtn">确认</a>
+                        <a href="javascript:void(0);" class="btn btn-primary" data-dismiss="modal">返回</a>
+                    </div>
+                </div>
             </div>
         </div>
 
