Add setting & user manager of doctor module

--- a/pages/doctor/joinConsultDetails.html
+++ b/pages/doctor/joinConsultDetails.html
@@ -104,6 +104,8 @@
                                 <li class="active"><a href="joinConsultManage.html">参加的会诊</a></li>
                             </ul>
                         </li>
+                        <li><a href="techManage.html">我的技师</a></li>
+                        <li><a href="setting.html">系统设置</a></li>
                     </ul>
                 </div>
             </div>
