--- a/pages/doctor/techManage.html
+++ b/pages/doctor/techManage.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../../static/img/logo.png">
-        <title>发起的会诊 | 医生</title>
+        <title>我的技师 | 医生</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="../../lib/bootstrap-3.3.5-dist/flatly/bootstrap.min.css">
         <!-- jQuery UI -->
@@ -101,12 +101,12 @@
                                 <span>会诊管理</span>
                                 <span class="caret"></span>
                             </a>
-                            <ul id="consultation-drop" class="">
-                                <li class="active"><a href="initConsultManage.html">发起的会诊</a></li>
+                            <ul id="consultation-drop" class="collapse">
+                                <li><a href="initConsultManage.html">发起的会诊</a></li>
                                 <li><a href="joinConsultManage.html">参加的会诊</a></li>
                             </ul>
                         </li>
-                        <li><a href="techManage.html">我的技师</a></li>
+                        <li class="active"><a href="techManage.html">我的技师</a></li>
                         <li><a href="setting.html">系统设置</a></li>
                     </ul>
                 </div>
@@ -115,48 +115,63 @@
         <div class="row main-page">
             <div class="path-navigation">
                 <ol class="breadcrumb">
-                    <li><a href=""></a>会诊管理</li>
-                    <li class="active">发起的会诊</li>
+                    <li class="active">技师管理</li>
                 </ol>
             </div>
             <div class="container-fluid">
-                <b class="table-title pull-left">进行中</b>
-                <a href="addConsult.html" class="btn btn-primary btn-sm pull-right">
-                    <span class="glyphicon glyphicon-plus"></span>&nbsp;添加会诊
-                </a>
+                <b class="table-title pull-left">技师列表</b>
             </div>
             <div class="container-fluid table-container">
-                <table class="table table-striped table-hover table-bordered" cellspacing="0" width="100%" id="ongoingTable">
+                <table class="table table-striped table-hover table-bordered" cellspacing="0" width="100%" id="techTable">
                     <thead>
                         <tr>
                             <th>#</th>
-                            <th>标题</th>
-                            <th>开始时间</th>
-                            <th>参与人数</th>
+                            <th>用户名</th>
+                            <th>姓名</th>
+                            <th>身份证号</th>
+                            <th>状态</th>
                             <th>操作</th>
                         </tr>
                     </thead>
-                    <tbody>
-                    </tbody>
                 </table>
             </div>
-            <div class="container-fluid">
-                <b class="table-title pull-left">已完成</b>
+        </div>
+
+        <div id="stopModal" class="modal fade">
+            <div class="modal-dialog">
+                <input type="hidden" id="stopId">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">停用状态修改提示</h4>
+                    </div>
+                    <div class="modal-body">
+                        确认停用该技师?
+                    </div>
+                    <div class="modal-footer">
+                        <a href="javascript:void(0);" class="btn btn-primary" id="stopModalBtn">确认</a>
+                        <a href="javascript:void(0);" class="btn btn-primary" data-dismiss="modal">返回</a>
+                    </div>
+                </div>
             </div>
-            <div class="container-fluid table-container">
-                <table class="table table-striped table-hover table-bordered" cellspacing="0" width="100%" id="finishedTable">
-                    <thead>
-                        <tr>
-                            <th>#</th>
-                            <th>标题</th>
-                            <th>开始时间</th>
-                            <th>参与人数</th>
-                            <th>操作</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
+        </div>
+
+        <div id="startModal" class="modal fade">
+            <div class="modal-dialog">
+                <input type="hidden" id="startId">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">启用提示</h4>
+                    </div>
+                    <div class="modal-body">
+                        确认启用该技师?
+                    </div>
+                    <div class="modal-footer">
+                        <a href="javascript:void(0);" class="btn btn-primary" id="startModalBtn">确认</a>
+                        <a href="javascript:void(0);" class="btn btn-primary" data-dismiss="modal">返回</a>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -170,6 +185,6 @@
         <script src="../../lib/DataTables-1.10.8/js/jquery.dataTables.min.js"></script>
         <script src="../../lib/DataTables-1.10.8/js/dataTables.bootstrap.min.js"></script>
 
-        <script src="../../static/js/doctor/initConsultManage.js"></script>
+        <script src="../../static/js/doctor/techManage.js"></script>
     </body>
 </html>
